# microscopy_computational_tools

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  example_run.sh  pyproject.toml
Dino4Cells/: run_batch.py  run_dino4cells.py  runit.sh  simple_dino_embed.py
Dino4Cells/archs/: trunc_normal.py  vision_transformer.py  xresnet.py
cellpose/: Dockerfile  README.md  config-sample.yaml  run_batch.py  run_cellpose.py
embeddings/: README.md  config-sample.yaml  csvwriter.py  hdf5writer.py  image_loader.py  run_dino4cells.py  run_model.py  runit.sh  subimage_inspector.py
embeddings/archs/: cnns.py  vision_transformer.py
embeddings/cpcnn/: simple_embed.py
embeddings/dino4cells/: simple_embed.py
hail_batch/: README.md  config-sample.yaml  run_hb_cellpose.py  run_hb_embedding.py
tools/: check_gpu.py  check_macos_gpu.sh  open_activity_monitor.sh
