[project]
name = "microscopy-computational-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cellpose==3.1.1.1",
    "efficientnet>=1.1.1",
    "fastremap==1.13.4",
    "natsort==8.4.0",
    "numba==0.59.0",
    "numpy==1.26.4",
    "opencv-python==4.8.0.76",
    "pandas==2.0.3",
    "pillow==10.0.1",
    "roifile==2023.5.12",
    "scipy==1.10.1",
    "tensorflow==2.17.1",
    "tifffile==2023.7.10",
    "torch==2.1.2",
    "tqdm==4.66.1",
]
